components/profile-controller/manifests/kustomize/components/istio-ambient/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: profiles-kfam
spec:
  parentRefs:
  - name: kubeflow-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /kfam/
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: x-forwarded-prefix
          value: /kfam/
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /kfam/
    backendRefs:
    - name: KFAM_SERVICE_NAME
      namespace: KFAM_SERVICE_NAMESPACE
      port: 8081
